@@ -8,8 +8,6 @@ DESIGN ISSUES
 - spacing change between charge pairs is very small with battery, because battery range is so small compared to sim max
 
 HIGH PRIORITY
-- initial location of vector labels and values is wrong because vectors are zero length
-- detector background node is too wide and tall because initial layout of vectors and values is wrong
 - clean up layout and sizing of E-field detector
 - chose a more appropriate max for detector vectors
 - add zoom button to E-field detector (necessary after choosing a better max?)
